syntax = "proto3";

option go_package = "api/proto";
package api;

message Personality {
    int32 id_personality = 1; 
    string personality = 2; 
    string description = 3;
}

message JobPosition {
    int32 id_job_position = 1;
    string job_position = 2;
    string description = 3;
}

message ListPersonalitiesResponse {
    repeated Personality personalities = 1;
}

message ListPersonalitiesRequest {}

message ListJobPositionsRequest {}

message ListJobPositionsResponse {
    repeated JobPosition jobPositions = 1;
}

service CommonService {
    rpc ListPersonalities (ListPersonalitiesRequest) returns (ListPersonalitiesResponse) {}
    rpc ListJobPositions (ListJobPositionsRequest) returns (ListJobPositionsResponse) {}
}

// for auth
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string refreshToken = 2;
}

message RegisterRequest {
    string email = 1;
    string fullname = 2;
    string password = 3;
    string birthdate = 4;
    string gender = 5;
    string address = 6;
    int32 id_mbti = 7;
    int32 id_job_position = 8;
}

message RegisterResponse {
    string userId = 1;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (LoginResponse);
}

// for user
message EditableData {
    string fullname = 1;
    string email = 2;
    string birthdate = 3;
    string address = 4;
    int32 id_mbti = 5;
    int32 id_job_position = 6;
}

message MessageResponse {
    string id_user = 1;
    string message = 2;
}

message UserRequest {}

message ProfileResponse {
    string fullname = 1;
    string email = 2;
    string gender = 3;
    string birthdate = 4;
    string address = 5;
    string personality = 6;
    string position = 7;
}


message ChangePasswordRequest {
    string old_password = 2;
    string new_password = 3;
}

service UserService {
    rpc Profile (UserRequest) returns (ProfileResponse);
    rpc Update (EditableData) returns (MessageResponse);
    rpc Delete (UserRequest) returns (MessageResponse);
    rpc ChangePassword (ChangePasswordRequest) returns (MessageResponse);
}

// for logbook
message CreateLogbookRequest {
    string logs = 2;
    string log_date = 3;
}

message ListLogbookRequest {
}

message LogbookResponse {
    string id_logbook = 1;
    string logs = 2;
    string log_date = 3;
}

message ListLogbookResponse {
    repeated LogbookResponse logbooks = 2;
}

message UpdateLogbookRequest {
    string id_logbook = 1;
    string logs = 2;
    string log_date = 3;
}

message DeleteLogbookRequest {
    string id_logbook = 1;
}

message LogbookResponseMessage {
    string id_logbook = 1;
    string message = 2;
}

service LogbookService {
    rpc Create (CreateLogbookRequest) returns (LogbookResponseMessage);
    rpc List (ListLogbookRequest) returns (ListLogbookResponse);
    rpc Update (UpdateLogbookRequest) returns (LogbookResponseMessage);
    rpc Delete (DeleteLogbookRequest) returns (LogbookResponseMessage);
}